hard-gists/4495f2c97ae6605c32c8b8c61bd34a74/run.log
=== Docker Run Log for 4495f2c97ae6605c32c8b8c61bd34a74 ===
Started at: Mi 29. Okt 14:40:45 CET 2025

[2025-10-29 14:40:46] START: Running container for 4495f2c97ae6605c32c8b8c61bd34a74
[2025-10-29 14:40:46] SUCCESS: Container d1956c0c3fa180e914f6c2c829dac7f497426dd106a88961578aac9ceaca6a57 started for 4495f2c97ae6605c32c8b8c61bd34a74
=== Container logs for 4495f2c97ae6605c32c8b8c61bd34a74 ===
  File "/snippet.py", line 73
    print "ROC:", round(roc,3)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4495f2c97ae6605c32c8b8c61bd34a74 ===
[2025-10-29 14:40:48] INFO: Container d1956c0c3fa180e914f6c2c829dac7f497426dd106a88961578aac9ceaca6a57 has stopped
